<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <!-- Preference - Location -->
    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Omsk</string>
    <string name="pref_location_description">Location description</string>

    <string name="pref_day_count_title">Day count</string>
    <string name="pref_day_count_key" translatable="false">cnt</string>
    <string name="pref_day_count_default" translatable="false">7</string>
    <string name="pref_day_count_description">Day count description</string>

    <!-- Preference - Weather Notifications -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Preference - Units -->
    <string name="pref_units_title">Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_units_imperial_title">Imperial</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_metric_title">Metric</string>
    <string name="pref_units_default" translatable="false">@string/pref_units_metric</string>
    <string name="pref_units_description">Units description</string>
    <string-array name="pref_units_titles">
        <item>@string/pref_units_metric_title</item>
        <item>@string/pref_units_imperial_title</item>
    </string-array>
    <string-array name="pref_units_values">
        <item>@string/pref_units_metric</item>
        <item>@string/pref_units_imperial</item>
    </string-array>


    <!--  -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.vladimiry.developer.loc</string>
    <string name="content_authority">loc.developer.vladimiry.sunshine</string>

    <!-- Notification  -->
    <string name="pref_last_notification">last_notification</string>
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>



    <!---->
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Wind direction -->
    <string name="wind_direction_n">N</string>
    <string name="wind_direction_ne">NE</string>
    <string name="wind_direction_e">E</string>
    <string name="wind_direction_se">SE</string>
    <string name="wind_direction_s">S</string>
    <string name="wind_direction_sw">SW</string>
    <string name="wind_direction_w">W</string>
    <string name="wind_direction_nw">NW</string>

</resources>
