<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_location_title" />

    <EditTextPreference
        android:defaultValue="@string/pref_day_count_default"
        android:inputType="number"
        android:key="@string/pref_day_count_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_day_count_title" />

    <ListPreference
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/pref_units_titles"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_units_title" />

</PreferenceScreen>
